package com.project.MyRh.Models.Enums;

public enum ContractType {
    CDI,
    CDD,
    INTERIM,
    FREELANCE,
    STAGE
}
