@startuml
class Admin {
    -id : Integer
    -name : String
    -email : String
    -password : String
    -phone : String
    }

class Applicant {
    -id : Integer
    -name : String
    -email : String
    -phone : Integer
    -address : String
    -experience : String
    -education : String
    }

class JobOffer {
    -id : Integer
    -title : String
    -description : String
    -salary : Real
    -location : String
    -date : Date
    -contract : CONTRACT_TYPE
    }

class Company{
    -id : Integer
    -name : String
    -email : String
    -password : String
    -phone : String
    -address : String
    -description : String
    -logo : String
    -offersCounter : Integer
    }
class Applications{
    -id : Integer
    -status : String
    -date : Date
    }

class Pack{
    -id : Integer
    -name : String
    -price : Real
    }

class Subscription{
    -id : Integer
    -date : Date
}
interface CONTRACT_TYPE{
    +CDI
    +CDD
    +INTERIM
    +FREELANCE
    +STAGE
    }



Company  "1" o-- "1..*" JobOffer
Admin  "1" -- "1..*" JobOffer
JobOffer +-- CONTRACT_TYPE
Applicant "1..*" -- "1..*" JobOffer
(JobOffer, Applicant) .. Applications
Company "1..*" -- "1..*" Pack
(Company, Pack) .. Subscription

@enduml
